# DemoAppCalc

./: .gitignore  CMakeLists.txt  DemoAppCalc.sln
DemoAppCalc/: AbstractController.h  AbstractScreen.h  BaseScreen.cpp  BaseScreen.h  CMakeLists.txt  DemoAppCalc.vcxproj  DemoAppCalc.vcxproj.filters  History.cpp  History.h  HistoryActionsScreen.cpp  HistoryActionsScreen.h  HistoryOwner.h  MainScreen.cpp  MainScreen.h  MathActionsScreen.cpp  MathActionsScreen.h  Router.cpp  Router.h  ScreenController.cpp  ScreenController.h  ScreenOption.cpp  ScreenOption.h  main.cpp  types.h
