project(DemoAppCalc-DemoAppCalc)

add_executable(${PROJECT_NAME}

        DemoAppCalc.cpp

        AbstractScreen.cpp
        AbstractScreen.h
        BaseScreen.cpp
        BaseScreen.h
        MainScreen.cpp
        MainScreen.h
        MathActionsScreen.cpp
        MathActionsScreen.h
        ScreenController.cpp
        ScreenController.h
        ScreenOption.cpp
        ScreenOption.h
        )